--- a/templates/partials/website.hbs
+++ b/templates/partials/website.hbs
@@ -111,6 +111,9 @@
                                 href="" target="_blank">
                                 <div>
                                     <img src="image/st.gif" class="aboutpic" alt="">
+                                    {{!-- <img src="image/st.gif" class="aboutpic" alt=""> --}}
+
+
                                 </div>
                             </a>
                             <h6>still in work</h6>
