--- a/templates/views/indexs.hbs
+++ b/templates/views/indexs.hbs
@@ -63,7 +63,7 @@
                     <div class="col-md-6 col-12 hero-text order-md-1 order-0">
                         <figure>
                             {{!-- <img src="image/growth.svg" alt=""> --}}
-                            <img src="image/ctn.gif" alt="">
+                            <img src="image/ctn.gif"class="toppic" alt="">
                         </figure>
 
                     </div>
@@ -96,9 +96,7 @@
 {{>team}}
 {{!-- maps  end  --}}
 
-{{!-- maps   starts  --}}
-{{>map}}
-{{!-- maps  end  --}}
+
 
 {{!--  contact  starts  --}}
 {{>contact}}
