--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -184,7 +184,7 @@
     © 2021 Copyright:
     <h3>
        
-         <a class="navbar-brand" href="#logo"  class="foot">VIVEK SINGH ( CYPHON TECH ) ............................................... CLICK TO GO TOP ⬆️</a>
+         <a class="navbar-brand" href="#logo"  class="foot">VIVEK SINGH ( CYPHON TECH ) ....... CLICK TO GO TOP ⬆️</a>
     </h3>
   
   </div>
