--- a/templates/partials/team.hbs
+++ b/templates/partials/team.hbs
@@ -40,15 +40,21 @@
                             
                             <h4>VIVEK SINGH</h4>
 
-                            <a
-                                href="https://www.linkedin.com/in/vivek-singh-33a491188/"  target="_blank">
+                            
+                                
                                 <div>
                                     <img src="image/vf.jpg" class="vivek" alt="">
+                                </div>
+                            
+                               <a
+                                href="https://www.linkedin.com/in/vivek-singh-33a491188/"  target="_blank">
+                                <div>
+                                     <h6>click to view</h6>
                                 </div>
                             </a>
 
                             
-                            <h6>click to view</h6>
+                           
                         </div>
                     </div>
                 </div>
@@ -64,13 +70,18 @@
                             </div>
 
                             <h4>PIYUSH TIWARI</h4>
-                            <a
-                                href="https://www.linkedin.com/in/piyush-kumar-tiwari-0b24b918b/" target="_blank">
+
                                 <div>
                                     <img src="image/piyush.jpeg" class="piyush" alt="">
                                 </div>
+                            
+                            <a
+                                href="https://www.linkedin.com/in/piyush-kumar-tiwari-0b24b918b/" target="_blank">
+                                <div>
+                                    <h6>click to view</h6>
+                                </div>
                             </a>
-                            <h6>click to view</h6>
+                            
                         </div>
                     </div>
                 </div>
@@ -105,13 +116,19 @@
                                 <img src="image/pi.png"class="html" alt="">
                             </div>
                             <h4>REQUIRED</h4>
-                           <a
-                                href="" target="_blank">
+                           
+                                
                                 <div>
                                     <img src="image/s1.gif" class="vivek" alt="">
                                 </div>
+                            
+                             <a
+                                href="" target="_blank">
+                                <div>
+                                    <h6>click to view</h6>
+                                </div>
                             </a>
-                            <h6>click to view</h6>
+                            
                         </div>
                     </div>
                 </div>
