--- a/templates/partials/website.hbs
+++ b/templates/partials/website.hbs
@@ -16,14 +16,19 @@
                             </div>
                             <h4>WEATHER-REPORT</h4>
 
-                            <a
-                                href="" target="_blank">
+                         
                                 <div>
                                     <img src="image/www.gif" class="aboutgif" alt="">
                                 </div>
+                            
+                            <a
+                                href="" target="_blank">
+                                <div>
+                                    <h6>click to view</h6>
+                                </div>
                             </a>
 
-                            <h6>click to view</h6>
+                            
                         </div>
                     </div>
                 </div>
@@ -41,15 +46,20 @@
                             
                             <h4>FOOD-ORDER</h4>
 
+                         
+                                <div>
+                                    <img src="image/f2.gif" class="aboutgiffood" alt="">
+                                </div>
+                        
                             <a
                                 href="https://cyphon-tech-food-world.netlify.app"  target="_blank">
                                 <div>
-                                    <img src="image/f2.gif" class="aboutgiffood" alt="">
+                                    <h6>click to view</h6>
                                 </div>
                             </a>
 
                             
-                            <h6>click to view</h6>
+                            
                         </div>
                     </div>
                 </div>
@@ -65,13 +75,18 @@
                             </div>
 
                             <h4>NOTES-MAKING</h4>
-                            <a
-                                href="https://notes-cyphon-tech.netlify.app" target="_blank">
+                           
                                 <div>
                                     <img src="image/notes.gif" class="aboutpic" alt="">
                                 </div>
+                            
+                              <a
+                                href="https://notes-cyphon-tech.netlify.app" target="_blank">
+                                <div>
+                                    <h6>click to view</h6>
+                                </div>
                             </a>
-                            <h6>click to view</h6>
+                            
                         </div>
                     </div>
                 </div>
@@ -86,13 +101,19 @@
                                 <img src="image/tr.png"class="html" alt="">
                             </div>
                             <h4>TRAVELING</h4>
-                            <a
-                                href="https://travel-cyphon-tech.netlify.app/" target="_blank">
+                        
+                            
                                 <div>
                                     <img src="image/tn.gif" class="tr"id="travel" alt="">
                                 </div>
+                        
+                            <a
+                                href="https://travel-cyphon-tech.netlify.app/" target="_blank">
+                                <div>
+                                     <h6>click to view</h6>
+                                </div>
                             </a>
-                           <h6>click to view</h6>
+                          
                         </div>
                     </div>
                 </div>
@@ -107,15 +128,12 @@
                                 <img src="image/net.png"class="html" alt="">
                             </div>
                             <h4>STREAMING</h4>
-                           <a
-                                href="" target="_blank">
+                           {{!-- <a --}}
+                                {{!-- href="" target="_blank"> --}}
                                 <div>
                                     <img src="image/st.gif" class="aboutpic" alt="">
-                                    {{!-- <img src="image/st.gif" class="aboutpic" alt=""> --}}
-
-
                                 </div>
-                            </a>
+                            {{!-- </a> --}}
                             <h6>still in work</h6>
                         </div>
                     </div>
@@ -131,12 +149,12 @@
                                 <img src="image/re.png"class="html" alt="">
                             </div>
                             <h4>REPORT</h4>
-                            <a
-                                href="" target="_blank">
+                            {{!-- <a --}}
+                                {{!-- href="" target="_blank"> --}}
                                 <div>
                                     <img src="image/rr.gif" class="aboutpic" alt="">
                                 </div>
-                            </a>
+                            {{!-- </a> --}}
                            <h6>still in work</h6>
                         </div>
                     </div>
