--- a/templates/partials/contact.hbs
+++ b/templates/partials/contact.hbs
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email" name="name">
+    <input type="text" class="form-control" id="exampleInputName1" placeholder="Enter email" name="name">
   </div>
 
   <div class="form-group">
@@ -24,12 +24,12 @@
 
   <div class="form-group">
     <label for="exampleInputEmail1">Phone</label>
-    <input type="number" class="form-control" id="exampleInputEmail1" placeholder="phone number"name="phone" >
+    <input type="number" class="form-control" id="exampleInputPhone1" placeholder="phone number"name="phone" >
   </div>
 
   <div class="form-group">
     <label for="exampleInputEmail1">Message</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="message "name="message" ><br>
+    <input type="text" class="form-control" id="exampleInputMessage1" placeholder="message "name="message" ><br>
 
   </div>
   <button type="submit" class="btn-style  btn-primary">Submit</button>
