--- a/templates/partials/website.hbs
+++ b/templates/partials/website.hbs
@@ -22,7 +22,7 @@
                                 </div>
                             
                             <a
-                                href="" target="_blank">
+                                href="https://cyphon-tech-weather.herokuapp.com/" target="_blank">
                                 <div>
                                     <h6>click to view</h6>
                                 </div>
