--- a/templates/partials/about.hbs
+++ b/templates/partials/about.hbs
@@ -14,7 +14,7 @@
                    
                     {{!-- right side  --}}
                      <div class="col-md-6 col-12 hero-text  d-flex justify-content-center align-items-start flex-column">
-                        <h1>WE ARE THE PROFESSIONAL DEVELOPER</h1>
+                        <h1>WE ARE THE PROFESSIONAL DEVELOPERS</h1>
                         <P>Welcome To <span class="bold-style">
                           Cyphon Tech
                         </span> we are the team for building different type of website for college school  restaurants and companies. </P>
